--- a/MacRecipe/MacRecipe.csproj
+++ b/MacRecipe/MacRecipe.csproj
@@ -245,7 +245,30 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\chicken-curry768x768_tcm9-149087.jpg" />
+    <Content Include="Content\images\chiken-thighs-with-crumbed-tomatoes768x768_tcm9-149091.jpg" />
+    <Content Include="Content\images\cod-viennoise768x768_tcm9-149095.jpg" />
+    <Content Include="Content\images\creamy-seafood-pasta768x768_tcm9-149096.jpg" />
+    <Content Include="Content\images\fish-with-tomatoes768x768_tcm9-149097.jpg" />
     <Content Include="Content\images\Logo.jpg" />
+    <Content Include="Content\images\newlogo.jpg" />
+    <Content Include="Content\images\spring-vegetable-casserole768x768_tcm9-149129.jpg" />
+    <Content Include="Content\styles.css" />
+    <Content Include="Content\webfonts\25173A_0_0.svg" />
+    <Content Include="Content\webfonts\25173A_1_0.svg" />
+    <Content Include="Content\webfonts\294099f3-8d00-4676-afc5-5e9d8d43ad69.svg" />
+    <Content Include="Content\webfonts\731dd4d3-64da-427d-ba61-01575b3cf3f7.svg" />
+    <Content Include="Content\webfonts\7bdad4a5-289b-42f9-b6fa-c5883b9e9f23.svg" />
+    <Content Include="Content\webfonts\avenir_book.svg" />
+    <Content Include="Content\webfonts\avenir_heavy.svg" />
+    <Content Include="Content\webfonts\avenir_medium.svg" />
+    <Content Include="Content\webfonts\f67fa3b5-c1d1-488f-8e60-a828b9ad56a4.svg" />
+    <Content Include="Content\webfonts\futura_book.svg" />
+    <Content Include="Content\webfonts\futura_heavy.svg" />
+    <Content Include="Content\webfonts\futura_medium.svg" />
+    <Content Include="Content\webfonts\icomoon.svg" />
+    <Content Include="Content\webfonts\macmillan_font.svg" />
+    <Content Include="Content\webfonts\macmillan_headline_02_12-webfont.svg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -254,9 +277,47 @@
     <Content Include="Scripts\ai.0.22.19-build00125.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="ApplicationInsights.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Content\webfonts\212ab03d-5db2-4d6a-b94c-171cc702aa51.eot" />
+    <Content Include="Content\webfonts\25173A_0_0.eot" />
+    <Content Include="Content\webfonts\25173A_0_0.woff" />
+    <Content Include="Content\webfonts\25173A_1_0.eot" />
+    <Content Include="Content\webfonts\25173A_1_0.woff" />
+    <Content Include="Content\webfonts\2cac77ec-9bc0-4ee7-87e4-27650190744f.woff" />
+    <Content Include="Content\webfonts\4f32268f-fd86-4960-b72c-4bb1ba75ec6f.eot" />
+    <Content Include="Content\webfonts\849bc5b9-a2ff-4343-977b-26ba8bd24a60.ttf" />
+    <Content Include="Content\webfonts\a24b3f55-c8c8-41a1-a77e-7cdf417d82f6.eot" />
+    <Content Include="Content\webfonts\aaf11848-aac2-4d09-9a9c-aac5ff7b8ff4.ttf" />
+    <Content Include="Content\webfonts\avenir_book.eot" />
+    <Content Include="Content\webfonts\avenir_book.ttf" />
+    <Content Include="Content\webfonts\avenir_book.woff" />
+    <Content Include="Content\webfonts\avenir_heavy.eot" />
+    <Content Include="Content\webfonts\avenir_heavy.ttf" />
+    <Content Include="Content\webfonts\avenir_heavy.woff" />
+    <Content Include="Content\webfonts\avenir_medium.eot" />
+    <Content Include="Content\webfonts\avenir_medium.ttf" />
+    <Content Include="Content\webfonts\avenir_medium.woff" />
+    <Content Include="Content\webfonts\c33278bc-988e-440b-b4be-6acc095e6044.ttf" />
+    <Content Include="Content\webfonts\d1dc54b2-878d-4693-8d6e-b442e99fef68.ttf" />
+    <Content Include="Content\webfonts\f61bf0f6-c193-4100-b940-12a1a01dcee5.eot" />
+    <Content Include="Content\webfonts\futura_book.ttf" />
+    <Content Include="Content\webfonts\futura_book.woff" />
+    <Content Include="Content\webfonts\futura_heavy.eot" />
+    <Content Include="Content\webfonts\futura_heavy.ttf" />
+    <Content Include="Content\webfonts\futura_heavy.woff" />
+    <Content Include="Content\webfonts\futura_medium.eot" />
+    <Content Include="Content\webfonts\futura_medium.ttf" />
+    <Content Include="Content\webfonts\futura_medium.woff" />
+    <Content Include="Content\webfonts\icomoon-json.json" />
+    <Content Include="Content\webfonts\icomoon.eot" />
+    <Content Include="Content\webfonts\icomoon.ttf" />
+    <Content Include="Content\webfonts\icomoon.woff" />
+    <Content Include="Content\webfonts\macmillan_font.eot" />
+    <Content Include="Content\webfonts\macmillan_font.ttf" />
+    <Content Include="Content\webfonts\macmillan_font.woff" />
+    <Content Include="Content\webfonts\macmillan_headline_02_12-webfont.eot" />
+    <Content Include="Content\webfonts\macmillan_headline_02_12-webfont.ttf" />
+    <Content Include="Content\webfonts\macmillan_headline_02_12-webfont.woff" />
+    <Content Include="Content\webfonts\web.config" />
     <None Include="Properties\PublishProfiles\MacRecipe.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -281,8 +342,8 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Home\Invites.cshtml" />
+    <Content Include="Views\Home\SelectRceipe.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
