--- a/MacRecipe/packages.config
+++ b/MacRecipe/packages.config
@@ -40,6 +40,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="RazorEngine" version="3.9.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="Sendgrid" version="8.0.5" targetFramework="net452" />
   <package id="SendGrid.CSharp.HTTP.Client" version="3.0.0" targetFramework="net452" />
